libs/bng/test/positive/0600_in_out_compartment_classes.bngl
# OK

begin model

begin parameters
	ITERATIONS  10
    MCELL_DIFFUSION_CONSTANT_3D_V1 1e-6
    MCELL_DIFFUSION_CONSTANT_3D_V2 1e-6 
    MCELL_DIFFUSION_CONSTANT_2D_S 5e-4
end parameters

begin molecule types
	V1()
	V2()
	S()
end molecule types

begin compartments
    EC 3 1
    PM 2 1e-80 EC
    CP 3 0.125^3 PM  
end compartments

begin seed species
	 V1@CP  100
	 S@PM  100
end seed species

begin reaction rules
	V1@OUT + S -> V2@IN 1e8
	S -> V2@OUT 1e4
	V1@OUT + S <-> V2@IN + S 1e8, 1e5
	S <-> V2@IN + S 1e5, 1e8
end reaction rules

end model
